Working on exporting EMPCA and covaraince matrix plotting code. Made updates to Midterm Report Methods section in tex/Midterm Report

--- a/tex/Midterm Report/update.bib
+++ b/tex/Midterm Report/update.bib
@@ -219,3 +219,36 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2012PASP..124.1015B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@INPROCEEDINGS{ASPCAP,
+   author = {{Elia Garcia Perez}, A. and {Allende-Prieto}, C. and {Cunha}, K.~M. and 
+	{Holtzman}, J.~A. and {Johnson}, J. and {Majewski}, S. and {Meszaros}, S. and 
+	{Schiavon}, R.~P. and {Shetrone}, M.~D. and {Smith}, V.~V. and 
+	{SDSS-III/APOGEE Collaboration}},
+    title = "{The APOGEE Stellar Parameters and Chemical Abundances Pipeline (ASPCAP)}",
+booktitle = {American Astronomical Society Meeting Abstracts \#223},
+     year = 2014,
+   series = {American Astronomical Society Meeting Abstracts},
+   volume = 223,
+    month = jan,
+      eid = {440.07},
+    pages = {440.07},
+   adsurl = {http://adsabs.harvard.edu/abs/2014AAS...22344007G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{data,
+   author = {{Hogg}, D.~W. and {Bovy}, J. and {Lang}, D.},
+    title = "{Data analysis recipes: Fitting a model to data}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1008.4686},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Data Analysis, Statistics and Probability},
+     year = 2010,
+    month = aug,
+   adsurl = {http://adsabs.harvard.edu/abs/2010arXiv1008.4686H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
