--- a/tex/Midterm Report/update.tex
+++ b/tex/Midterm Report/update.tex
@@ -16,6 +16,7 @@ Recent spectroscopic surveys have provided abundant data on stars in the Milky W
 
 \section{Introduction}
 \label{sec:back}
+% Talk about chemical tagging explicitly.
 A star's history, from its formation environment to its migratory motions, can be traced through its composition. Measuring elemental abundances from stellar spectra establishes this composition. However, current methods for calculating these abundances require robust theoretical models and complete understanding of measurement uncertainties. At present, these methods still exhibit systematic trends with other stellar properties, such as effective temperature $T_{\rm eff}$ or surface gravity $\log(g)$ \citep{holtzman2015}. Removing these contaminating effects from abundance calculations entirely may reveal statistically significant correlations between abundances and stellar age or location within a galaxy. 
 
 Recent large-volume spectroscopic survey data from the Apache Point Observatory Galactic Evolution Experiment (APOGEE, \citealt{APOGEE}), upcoming data from the Gaia mission \citep{GAIA} and other large spectroscopic surveys will offer rich spectral information about hundreds of thousands of stars. This data is a prime opportunity for abundance analysis. To take advantage of this, I will develop an efficient method for investigating abundance space \citep{openclusters}. The method, described in \S\ref{sec:methods}, uses spectra directly, rather than quantities derived by fitting multi-parameter model spectra. This reduces complexity in calculations of uncertainty, and is less sensitive to the systematic effects of other stellar properties than traditional methods. This will allow for a more accurate investigation the dimensionality of abundance space for a sample of stars, including probing the relative significance of particular elements. I will apply this method to spectra from APOGEE and investigate the dimensionality of the sample in abundance space. An understanding of trends in this space may place constraints on what chemical processes contributed to the formation of populations of stars. This in turn may reveal elements of the Milky Way's star formation history or trace how stars moved through the Milky Way after their formation.
@@ -27,9 +28,25 @@ This work will analyze the spectra of a sample of red clump stars from APOGEE's 
 
 \section{Methods}
 \label{sec:methods}
-Starting with our sample of APOGEE spectra, I will perform empirical fits to remove non-abundance stellar properties. Flux values from each spectrum at a given pixel $p$ $(F(p))$ are fit with a low order polynomial in $T_{\rm eff}$, $\log(g)$ and $Z$, so some function for flux is found: $f(p,T_{\rm eff},\log(g),Z)$. At each pixel residuals are calculated from the fit: $\delta = F(p) - f(p,T_{\rm eff},\log(g),Z)$. We can analyze these residuals directly, using principal component analysis (PCA). This assesses the amount of variance in each dimension of that data. In the case of the residual data, each pixel represents a dimension, with individual stars populating that dimension. Before running PCA with each pixel as an independent dimension we can get a broad sense of the influence of a particular element X by constructing a set of weighted residuals for that element. Residuals for element X pixels are weighted by normalized window functions which trace each X absorption feature and are then summed for each stellar spectrum. Performing PCA on these results reduces the problem from having dimension equal to the number of pixels to having dimensions equal to the number of elements (15). The resulting PCA eigenvectors will show which element (if any) is dominate in determining the residuals after other stellar parameters have been removed.
 
-I can improve upon the results of classic PCA method (applied to either the pixel or weighted residuals) by using EMPCA (Expectation Maximization PCA). This weights the input data according to its uncertainty \citep{EMPCA}. In order to use this, I need to find a good set of weights to use. A good place to start is to use the flux measurement uncertainties to serve as weights. However, it seems that for many pixels these uncertainties may be underestimatd. To correct for this, I use a sample of stars from open clusters, which should be internally homogeneous in terms of elemental composition. I calculate the residuals in the same way as I described above and take their covaraince. Assuming that the open clusters really are perfectly internally homogeneous (and thus any residual is due to some other source of noise) allows me to use the square root of the terms on the diagonal as a multiplicative factor to correct the uncertainties in the red clump sample. This assumes the pixels are not correlated with each other. These corrected uncertainties can then be used as weights for EMPCA.
+ %Talk about how open clusters are used for calibration
+ 
+Starting with our sample of APOGEE spectra, I will perform empirical fits to remove non-abundance stellar properties. I use spectra processed by the pipeline used to generate stellar parameters and chemical abundances, (ASPCAP - \citealt{ASPCAP}). These spectra are the combined results of all APOGEE spectra taken for a particular star. I begin by masking pixels in the spectra using the bitmask provided by the pipeline, an array of the same size as the corresponding spectrum. Bits set in the bitmask indicate particular problems with individual pixels in that spectrum, including flags for the effects of cosmic rays, pixel saturation, atmospheric absorption, and poor quality calibration files or inaccurate uncertainty estimations. I chose to mask on the effects listed as well as pixels with a signal to noise ratio (SNR) below 50. I then perform a correction on pixels where uncertainties seem underestimated, where the SNR $>$ 200, increasing the uncertainties calculated by ASPCAP at those pixels such that the new SNR does not exceed 200 at any pixel. The result is a masked set of spectra and a set of corrected uncertainties at each pixel, to which the mask on the spectra is applied.
+
+% Talk about open clusters calibration as additional correction to uncertainties
+
+% plot example spectrum before and after masking
+
+After masking the spectra and making corrections to the uncertainties,  the unmasked flux values $(F(p))$ at a given pixel $p$  for each star are weighted by their uncertainties and fit with a second order polynomial in $T_{\rm eff}$, $\log(g)$ and $Z$. Some function for flux is found: $f(p,T_{\rm eff},\log(g),Z)$ and at each of the 7214 pixels residuals are calculated from the fit: $\delta = F(p) - f(p,T_{\rm eff},\log(g),Z)$. The mask applied to the input spectra is then applied to these residuals. 
+
+% plot residuals example
+
+The fit residuals comprise the abundance space I wish to investigate. Trends relating to the bulk properties of the star have been removed by the polynomial fit in $T_{\mathrm{eff}},\,\log(g)$ and $Z$. Any deviation from the fit that remains must be attributed to differences in stellar abundances. In its raw form, the data $\delta$ populates a space in which each pixel is an apparently independent dimension. We can analyze these residuals directly, using expectation maximized principal component analysis (EMPCA - \citealt{empca}).  This algorithm assesses which dimensions of a data set contain the most variance, and produces eigenvectors ranked by how much of the data's variance they can explain. Applying EMPCA to the residuals returns eigenvectors with 7214 elements (the number of pixels in the input spectra). Pixels at which these eigenvectors have a large magnitude highlight wavelengths at which stellar flux (i.e. the depth of absorption features) varies the most across the sample. Determining which absorption features are most important for describing variance tells me which elements are best at distinguishing individual stars.
+
+However, individual pixels in a stellar spectra are not uncorrelated and do not represent independent dimensions in abundance space. In particular, pixels at which different absorption features for the same element occur will be correlated with each other. To account for this, and with additional effect of making the data set more easily tractable on a human level, a parallel set of approaches was used to reduce the dimension of abundance space. EMPCA was applied directly to the residuals $\delta$. The resulting eigenvectors were weighted according window functions describing absorption features for the 15 elements identified in \S \ref{sec:data}. At the same time, the residuals were weighted by these window functions, then EMPCA was applied. The results are in A FIGURE.
+
+%Before running PCA with each pixel as an independent dimension we can get a broad sense of the influence of a particular element X by constructing a set of weighted residuals for that element. Residuals for element X pixels are weighted by normalized window functions which trace each X absorption feature and are then summed for each stellar spectrum. Performing PCA on these results reduces the problem from having dimension equal to the number of pixels to having dimensions equal to the number of elements (15). The resulting PCA eigenvectors will show which element (if any) is dominate in determining the residuals after other stellar parameters have been removed.
+
 
 \section{Timeline}
 \label{sec:timeline}
@@ -64,6 +81,6 @@ I can improve upon the results of classic PCA method (applied to either the pixe
 \end{itemize}
 \end{itemize}
 
-\bibliography{update}
+\bibliography{update.bbl}
 
 \end{document}
