Syncing with Overleaf

--- a/tex/Midterm Report/update.bib
+++ b/tex/Midterm Report/update.bib
@@ -1,3 +1,102 @@
+
+@ARTICLE{mitschang,
+   author = {{Mitschang}, A.~W. and {De Silva}, G. and {Sharma}, S. and {Zucker}, D.~B.
+	},
+    title = "{Quantifying chemical tagging: towards robust group finding in the Galaxy}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1210.3407},
+ keywords = {methods: statistical, techniques: miscellaneous, stars: abundances, open clusters and associations: general},
+     year = 2013,
+    month = jan,
+   volume = 428,
+    pages = {2321-2332},
+      doi = {10.1093/mnras/sts194},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.428.2321M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{galah,
+   author = {{De Silva}, G.~M. and {Freeman}, K.~C. and {Bland-Hawthorn}, J. and 
+	{Martell}, S. and {de Boer}, E.~W. and {Asplund}, M. and {Keller}, S. and 
+	{Sharma}, S. and {Zucker}, D.~B. and {Zwitter}, T. and {Anguiano}, B. and 
+	{Bacigalupo}, C. and {Bayliss}, D. and {Beavis}, M.~A. and {Bergemann}, M. and 
+	{Campbell}, S. and {Cannon}, R. and {Carollo}, D. and {Casagrande}, L. and 
+	{Casey}, A.~R. and {Da Costa}, G. and {D'Orazi}, V. and {Dotter}, A. and 
+	{Duong}, L. and {Heger}, A. and {Ireland}, M.~J. and {Kafle}, P.~R. and 
+	{Kos}, J. and {Lattanzio}, J. and {Lewis}, G.~F. and {Lin}, J. and 
+	{Lind}, K. and {Munari}, U. and {Nataf}, D.~M. and {O'Toole}, S. and 
+	{Parker}, Q. and {Reid}, W. and {Schlesinger}, K.~J. and {Sheinis}, A. and 
+	{Simpson}, J.~D. and {Stello}, D. and {Ting}, Y.-S. and {Traven}, G. and 
+	{Watson}, F. and {Wittenmyer}, R. and {Yong}, D. and {{\v Z}erjal}, M.
+	},
+    title = "{The GALAH survey: scientific motivation}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1502.04767},
+ keywords = {Galaxy: stellar content},
+     year = 2015,
+    month = may,
+   volume = 449,
+    pages = {2604-2617},
+      doi = {10.1093/mnras/stv327},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.449.2604D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{CTcanwork,
+   author = {{Hogg}, D.~W. and {Casey}, A.~R. and {Ness}, M. and {Rix}, H.-W. and 
+	{Foreman-Mackey}, D.},
+    title = "{Chemical tagging can work: Identification of stellar phase-space structures purely by chemical-abundance similarity}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1601.05413},
+ keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+     year = 2016,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160105413H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{CTprospects,
+   author = {{Ting}, Y.-S. and {Conroy}, C. and {Goodman}, A.},
+    title = "{Prospects for Chemically Tagging Stars in the Galaxy}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1504.03327},
+ keywords = {Galaxy: abundances, Galaxy: disk, Galaxy: evolution, Galaxy: formation, ISM: abundances, stars: abundances},
+     year = 2015,
+    month = jul,
+   volume = 807,
+      eid = {104},
+    pages = {104},
+      doi = {10.1088/0004-637X/807/1/104},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...807..104T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{newgalaxy,
+   author = {{Freeman}, K. and {Bland-Hawthorn}, J.},
+    title = "{The New Galaxy: Signatures of Its Formation}",
+  journal = {\araa},
+   eprint = {astro-ph/0208106},
+ keywords = {osmology, local group, stellar populations, stellar kinematics},
+     year = 2002,
+   volume = 40,
+    pages = {487-537},
+      doi = {10.1146/annurev.astro.40.060401.093840},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ARA%26A..40..487F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{bovy2015,
    author = {{Bovy}, J. and {Rix}, H.-W. and {Schlafly}, E.~F. and {Nidever}, D.~L. and 
 	{Holtzman}, J.~A. and {Shetrone}, M. and {Beers}, T.~C.},
