Setting up a file to calibrate red clump from open clusters - added this capability to Sample.SNRcorrect()

--- a/tex/Midterm Report/update.tex
+++ b/tex/Midterm Report/update.tex
@@ -45,7 +45,7 @@ After masking the spectra and making corrections to the uncertainties,  the spec
 
 \begin{figure}[H]
 \centering
-\includegraphics[width = \linewidth]{examplespectrum.png}
+\includegraphics[width = \linewidth]{M67_C_residual_4313.png}
 \caption{}
 \label{fig:spectra}
 \end{figure}
@@ -104,6 +104,6 @@ However, individual pixels in a stellar spectra are not uncorrelated and do not 
 \end{itemize}
 \end{itemize}
 
-\bibliography{update}
+\bibliography{update.bbl}
 
 \end{document}
